# case_sigma

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  index.html  main.py  models.yml  noise_patterns.txt  pyproject.toml  requirements.txt  run_production.py  scoring.py  server.py  text_cleaning.py  text_scoring.py  transcription.py  utils_app.py  utils_text.py
image_process/: image_caption_dataset.py  image_captions.csv
output_data/: model.pkl
templates/: index.html
